Services proxy for Bill Pay and update yaml file
